objects/vlocity_ins__ContractRecipient__c.object
<CustomObject>
    <description>Provides information about the status of each recepient in a DocuSign eSignature envelope.</description>
    <fields>
        <fullName>vlocity_ins__AccessCode__c</fullName>
        <description>This optional element specifies the access code a recipient has to enter to validate the identity.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Access Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Recipient Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contract Recipients</relationshipLabel>
        <relationshipName>ContractRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract Indentifier</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contract Recipients</relationshipLabel>
        <relationshipName>ContractRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateDeclined__c</fullName>
        <description>Date the signature was declined</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateDelivered__c</fullName>
        <description>Date the document was delivered</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Delivered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateSent__c</fullName>
        <description>Date the document was sent</description>
        <formula>vlocity_ins__EnvelopeId__r.vlocity_ins__SentDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DateSigned__c</fullName>
        <description>Date the document was signed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeclineReason__c</fullName>
        <description>Reason for declining signature</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Decline Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DeliveryMethod__c</fullName>
        <description>Method of document delivery</description>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Offline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnvelopeId__c</fullName>
        <description>Contract Envelope</description>
        <label>Contract Envelope</label>
        <referenceTo>vlocity_ins__ContractEnvelope__c</referenceTo>
        <relationshipLabel>Contract Recipients</relationshipLabel>
        <relationshipName>ContractRecipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EnvelopeIdentifier__c</fullName>
        <description>Envelope Identifier</description>
        <formula>vlocity_ins__EnvelopeId__r.vlocity_ins__EnvelopeIdentifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Envelope Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HostEmail__c</fullName>
        <description>This is used for in person signer type of recipient.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Host Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecipientFullName__c</fullName>
        <description>Full Name of recipient</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecipientId__c</fullName>
        <description>Unique identifier for the recipient. It is used by the tab element to indicate which recipient is to sign the Document.</description>
        <label>Recipient Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecipientLocaleCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Locale Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RecipientLocale__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recipient Locale</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RoutingOrder__c</fullName>
        <description>Document routing order</description>
        <label>Routing Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SignerName__c</fullName>
        <description>Optional element only used with recipient types In Person Signers and Signers. The full legal name of a signer for an InPersonSigner recipient Type.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Signer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Status__c</fullName>
        <description>Recepient status</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <description>Recepient type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                </value>
                <value>
                    <fullName>Host In Person</fullName>
                </value>
                <value>
                    <fullName>Carbon Copy</fullName>
                </value>
                <value>
                    <fullName>Certified Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Recipient</label>
    <nameField>
        <displayFormat>REC_{000000}</displayFormat>
        <label>Contract Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>